DX-42. Added Integration Gmail and Yandex. Added mail extension automation. Global exception handler